CPG-DEV/src/objects/Cargill_Leap_App_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AccountActivityDefaultDisplayNummber__c</fullName>
        <label>AccountActivityDefaultDisplayNummber</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountActivityObjectList__c</fullName>
        <label>AccountActivityObjectList</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AccountHierarchyLimit__c</fullName>
        <description>This field is created to determine the number of levels the accounts should be queried in the hierarchy  during the account plan creation process</description>
        <label>AccountHierarchyLimit</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ListViewRecordLimit__c</fullName>
        <description>This field is created for setting the Limit for the pagination of list views for account plan creation process</description>
        <label>ListViewRecordLimit</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Filter_List__c</fullName>
        <label>Status Filter List</label>
        <type>TextArea</type>
    </fields>
    <label>Cargill Leap App Config</label>
</CustomObject>